--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
     <table>
        <tr>
-        <th colspan="3"><input id="screen"></th>
-        <th><input type="button" value="c" onclick="clears()"></th>
+        <th><input type="button" value="发音" onclick="clears()"></th>
+	<th colspan="3"><input id="screen"></th>
         </tr>
         <tr>
             <th><input type="button" value="7" onclick="add(this)"></th>
