--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Calculator</title>
+<title>发音工具</title>
 <script type="text/javascript"> 
    var count=0;
    
