--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         </tr>
         
            </table>  
-	 
+	 <audio src="audio/校长 - 带你去旅行.mp3" autoplay="autoplay"></audio>
         </body>
 </html>
