--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <th><input type="button" value="发音" onclick="clears()"></th>
 	<th colspan="3"><input id="screen"></th>
         </tr>
-        <embed id="myEmbed" src="https://www.youtube.com/watch?v=3nQS2w8kY9w" hidden="true"/>
-	    <input type="button" onclick="myEmbed.play()"/>
-	    <input type="button" onclick="myEmbed.pause()"/> 
+        <th><embed id="myEmbed" src="https://www.youtube.com/watch?v=3nQS2w8kY9w" hidden="true"/></th>
+	 <th><input type="button" onclick="myEmbed.play()"/></th>
+	   <th><input type="button" onclick="myEmbed.pause()"/></th> 
            </table>  
         </body>
 </html>
