--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 <body>
     <table>
        <tr>
-        <th><input type="button" value="发音" onclick="clears()"></th>
-	<th colspan="3"><input id="screen"></th>
+        <th><input type="button" value="男性发音" onclick="clears()"></th>
+	<th colspan="1"><input id="screen"></th>
+	       <th colspan="1"><input id="screen"></th>
         </tr>
+	 <tr>
+        <th><input type="button" value="女性发音" onclick="clears()"></th>
+	<th colspan="1"><input id="screen"></th>
+	       <th colspan="1"><input id="screen"></th>
+        </tr>    
         <th><embed id="myEmbed" src="https://www.youtube.com/watch?v=k4ixAfJ1LuI" hidden="true"/></th>
-	 <th><input type="button" onclick="myEmbed.play()"/></th>
-	   <th><input type="button" onclick="myEmbed.pause()"/></th> 
            </table>  
         </body>
 </html>
