--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <table>
        <tr>
         <th><input type="button" value="男性发音" onclick="clears()"></th>
-	<th colspan="0.5"><input id="screen"></th>
+	<th rowspan="1"><input id="screen"></th>
 	       <th colspan="1"><input id="screen"></th>
         </tr>
 	 <tr>
