--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <table>
        <tr>
-        <th><input type="button" value="男性发音" onclick="clears(screen1&screen2)"></th>
+        <th><input type="button" value="男性发音" onclick="clears()"></th>
 	<th rowspan="1"><input id="screen1"></th>
 	       <th colspan="1"><input id="screen2"></th>
         </tr>
