--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <table>
        <tr>
         <th><input type="button" value="男性发音" onclick="clears()"></th>
-	<th rowspan="1"><input id="screen1"></th>
-	       <th colspan="1"><input id="screen2"></th>
+	<th rowspan="1"><input id="screen"></th>
+	       <th colspan="1"><input id="screen"></th>
         </tr>
 	 <tr>
         <th><input type="button" value="女性发音" onclick="clears()"></th>
-	<th colspan="1"><input id="screen3"></th>
-	       <th colspan="1"><input id="screen4"></th>
+	<th colspan="1"><input id="screen"></th>
+	       <th colspan="1"><input id="screen"></th>
         </tr>    
         <th><embed id="myEmbed" src="https://www.youtube.com/watch?v=k4ixAfJ1LuI" hidden="true"/></th>
            </table>  
