--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
         <th><input type="button" value="女性发音" onclick="clears2()"></th>
 	<th colspan="1"><input id="screen3"></th>
 	       <th colspan="1"><input id="screen4"></th>
-        </tr>    
-        <th><embed id="myEmbed" src="https://www.youtube.com/watch?v=k4ixAfJ1LuI" hidden="true"/></th>
+        </tr>   
            </table>  
+	<audio src="C:\Users\wangz\Desktop\404" controls>
+        您的浏览器不支持 audio 标签。
+    </audio>
         </body>
 </html>
