--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	       <th colspan="1"><input id="screen4"></th>
         </tr>   
            </table>  
-	<audio src="C:\Users\wangz\Desktop\404" controls>
+	<audio src="C:\Users\wangz\Desktop\404.mp3" controls>
         您的浏览器不支持 audio 标签。
     </audio>
         </body>
