--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
  
    var count=0;
    
-   function add(num){
-	   document.getElementById("screen").value+=num.value;
-   }
-   function clears1(){
+   function clears1(){	
+	   if(document.getElementById("screen1").value==1){
+		document.getElementById("bgmusic").play();  
+	   }
+	    if(document.getElementById("screen2").value==2){
+		document.getElementById("bgmusic").play();  
+	   }
 	   document.getElementById("screen1").value="";
 	   document.getElementById("screen2").value="";  
    }
@@ -43,8 +46,7 @@
 	       <th colspan="1"><input id="screen4"></th>
         </tr>   
            </table>  
-	<audio src="C:\Users\wangz\Desktop\404.mp3" controls>
-        您的浏览器不支持 audio 标签。
-    </audio>
+<embed id=bgmusic src="http://www.yymp3.com/Play/11109/142144.htm" autostart="false" loop="false" hidden="false" width=0 height=0>
+	
         </body>
 </html>
