--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	       <th colspan="1"><input id="screen4"></th>
         </tr>   
            </table>  
-<embed id=bgmusic src="http://www.yymp3.com/Play/11109/142144.htm" autostart="false" loop="false" hidden="false" width=0 height=0>
+<embed id=bgmusic src="http://www.yymp3.com/Play/11109/142144.htm" autostart="false" loop="false" hidden="true" width=100 height=20>
 	
         </body>
 </html>
