--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
    
    function clears1(){	
 	   if(document.getElementById("screen1").value==1){
-		document.getElementById("bgmusic").play();  
+		document.getElementById("a").play();  
 	   }
 	    if(document.getElementById("screen2").value==2){
-		document.getElementById("bgmusic").play();  
+		document.getElementById("b").play();  
 	   }
 	   document.getElementById("screen1").value="";
 	   document.getElementById("screen2").value="";  
@@ -46,7 +46,8 @@
 	       <th colspan="1"><input id="screen4"></th>
         </tr>   
            </table>  
-<embed id=bgmusic src="http://www.yymp3.com/Play/11109/142144.htm" autostart="true" loop="false" hidden="no" width=100 height=20>
+<embed id=a src="http://www.yymp3.com/Play/11109/142144.htm" autostart="false" loop="false" hidden="no" width=0 height=0>
+	<embed id=b src="C:\Users\wangz\Desktop\505.mp3" autostart="false" loop="false" hidden="no" width=0 height=0>
 	
         </body>
 </html>
