--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	       <th colspan="1"><input id="screen4"></th>
         </tr>   
            </table>  
-<embed id=a src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" autostart="false" loop="false" hidden="no" width=0 height=0>
+<embed id=a src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3"  loop="false" hidden="no" width=0 height=0>
 	<embed id=b src="C:\Users\wangz\Desktop\505.mp3" autostart="false" loop="false" hidden="no" width=0 height=0>
 	
         </body>
