--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ function toggleSound1() {
                 music.paused=false;
                 music.play(); //没有就播放 
             }  
-            
+             document.getElementById("screen1").value="";
         }
    
 </script>
