--- a/index.html
+++ b/index.html
@@ -54,9 +54,16 @@ function toggleSound1() {
         <th><input type="button" value="女性发音" onclick="clears2()"></th>
 	<th colspan="1"><input id="screen3"></th>
 	       <th colspan="1"><input id="screen4"></th>
-        </tr>   
+        </tr>  
+	 <tr>
+        <th><input type="button" value="1" onclick="first()"></th>
+        <th><input type="button" value="2" onclick="second()"></th>
+	<th><input type="button" value="3" onclick="third()"></th>
+        <th><input type="button" value="4" onclick="fourth()"></th>
+	<th><input type="button" value="5" onclick="fifth()"></th>
+	    </tr>
            </table>  
-<embed id=a muted src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" autostart="false" loop="false" hidden="no" width=0 height=0>
+<embed id=a src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" autostart="false" loop="false" hidden="no" width=0 height=0>
 	<embed id=b src="C:\Users\wangz\Desktop\505.mp3" autostart="false" loop="false" hidden="no" width=0 height=0>
 	
         </body>
