--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <title>发音工具</title>
 <script type="text/javascript"> 
  
-   var count=0;
-   
    function clears1(){	
 	   if(document.getElementById("screen1").value==1){
 		document.getElementById("a").play();  
@@ -63,7 +61,7 @@ function toggleSound1() {
 	       <th><input id="screen4"></th>
         </tr>  
            </table> 
-<audio autoplay>
+<audio>
 
 <source id=a src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" type="audio/mp3">
 
