--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ function toggleSound1() {
 	<th><input type="button" value="5" onclick="fifth()"></th>
 	    </tr>
     <table>
-       <tr>
-        <th><input type="button" value="男性发音" onclick="clear1()"></th>
+      	 <tr>
+        <th><input type="button" value="男女性发音" onclick="clears1()"></th>
 	<th><input id="screen1"></th>
 	       <th><input id="screen2"></th>
-        </tr>
+        </tr>  
 	 <tr>
         <th><input type="button" value="女性发音" onclick="clears2()"></th>
 	<th><input id="screen3"></th>
