--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script type="text/javascript"> 
  
    function clears1(){	
-	   
+	   document.getElementById("a").play();  
 	   document.getElementById("screen1").value="";
 	   document.getElementById("screen2").value="";  
    }
