--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function toggleSound1() {
 	    </tr>
     <table>
       	 <tr>
-        <th><input type="button" value="男女性发音" onclick="clears1()"></th>
+        <th><input type="button" value="男1性发音" onclick="clears1()"></th>
 	<th><input id="screen1"></th>
 	       <th><input id="screen2"></th>
         </tr>  
