--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function toggleSound1() {
 	    </tr>
     <table>
       	 <tr>
-        <th><input type="button" value="男3性发音" onclick="clears1()"></th>
+        <th><input type="button" value="男4性发音" onclick="clears1()"></th>
 	<th><input id="screen1"></th>
 	       <th><input id="screen2"></th>
         </tr>  
@@ -57,9 +57,9 @@ function toggleSound1() {
         </tr>  
            </table> 
 
-<audio>
-<embed id=“a” src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" type="audio/mp3">
-	</audio>
+
+<embed id=“a” src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" type="audio/mp3" autostart="false">
+
 	
 	
         </body>
