--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@ function toggleSound1() {
         </tr>  
            </table> 
 
-<audio>
-<embed id=a src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" type="audio/mp3" autostart="false">
+<audio id=a src="https://traffic.omny.fm/d/clips/4b5f9d6d-9214-48cb-8455-a73200038129/52f1197d-7b84-44bf-9741-a79400815569/8bcd4a69-79f6-491a-b1a4-aa560143d1b6/audio.mp3" type="audio/mp3" autostart="false">
 	</audio>
 	
 	
