--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	    </tr>
     <table>
       	 <tr>
-        <th><input type="button" value="男性发音" onclick="clears1()"></th>
+        <th><input type="button" value="1男性发音" onclick="clears1()"></th>
 	<th><input id="screen1"></th>
 	       <th><input id="screen2"></th>
         </tr>  
