--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
  
    function clears1(){	
 	 if(document.getElementById("screen1").value==1){
-		setTimeout(function(){document.getElementById("a").play()}, 5*1000); 
-	      document.getElementById("b").play();
+	      document.getElementById("a").play(); 
+	       var v=document.getElementById("b").duration;
+		setTimeout(function(){document.getElementById("b").play()}, v*1000); 
+	    
 	   }
 	  
 	   document.getElementById("screen1").value="";
@@ -41,7 +43,7 @@
 	    </tr>
     <table>
       	 <tr>
-        <th><input type="button" value="6男性发音" onclick="clears1()"></th>
+        <th><input type="button" value="7男性发音" onclick="clears1()"></th>
 	<th><input id="screen1"></th>
 	       <th><input id="screen2"></th>
         </tr>  
