--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    function clears1(){	
 	 if(document.getElementById("screen1").value==1){
 	      document.getElementById("a").play(); 
-		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("b").duration*1000); 
+		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("a").duration*1000); 
 	    
 	   }
 	  
