--- a/index.html
+++ b/index.html
@@ -6,30 +6,25 @@
 <script type="text/javascript"> 
  
    function clears1(){	
-	 if(document.getElementById("screen1").value==1){
+	 if(document.getElementById("screen1").value==11){
 	      document.getElementById("a").play(); 
-		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("a").duration*1000); 
-	    
+		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("a").duration*1000); 	    
 	   }
-	  
-	   document.getElementById("screen1").value="";
-	   document.getElementById("screen2").value="";  
+	 if(document.getElementById("screen1").value==1){
+		  document.getElementById("a").play();  
+	 } 
+	   document.getElementById("screen1").value="";  
    }
-	function clears2(){
-	   document.getElementById("screen3").value="";
-	   document.getElementById("screen4").value="";  
+	
+   function clears2(){
+	   document.getElementById("screen2").value="";
    }
-   function getResult(){
-	   count+=1;
-	   var result = document.getElementById("screen").value;
-	   document.getElementById("screen").value=eval(result);
-	   document.getElementById(count).value=result+"="+eval(result);
-	   if(count==10){
-		   count=0;
-	   }
-   }
-
    
+   function first(){}
+   function second(){}
+   function third(){}
+   function fourth(){}
+   fifth(){}	
 </script>
 </head>
 <body>
@@ -44,12 +39,10 @@
       	 <tr>
         <th><input type="button" value="8男性发音" onclick="clears1()"></th>
 	<th><input id="screen1"></th>
-	       <th><input id="screen2"></th>
         </tr>  
 	 <tr>
         <th><input type="button" value="女性发音" onclick="clears2()"></th>
-	<th><input id="screen3"></th>
-	       <th><input id="screen4"></th>
+	<th><input id="screen2"></th>
         </tr>  
            </table> 
 
