--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("a").duration*1000); 	    
 	   }
 	 if(document.getElementById("screen1").value==1){
-		  document.getElementById("a").play();  
+		  document.getElementById("b").play();  
 	 } 
 	   document.getElementById("screen1").value="";  
    }
@@ -37,7 +37,7 @@
 	    </tr>
     <table>
       	 <tr>
-        <th><input type="button" value="8男性发音" onclick="clears1()"></th>
+        <th><input type="button" value="男性发音" onclick="clears1()"></th>
 	<th><input id="screen1"></th>
         </tr>  
 	 <tr>
