--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    function second(){}
    function third(){}
    function fourth(){}
-   fifth(){}	
+   function fifth(){}	
 </script>
 </head>
 <body>
