--- a/index.html
+++ b/index.html
@@ -6,35 +6,194 @@
 <script type="text/javascript"> 
  
    function clears1(){	
+	 
+	 if(document.getElementById("screen1").value==1){
+		  document.getElementById("a").play();  
+	 } 
+	 if(document.getElementById("screen1").value==2){
+		  document.getElementById("b").play();  
+	 } 
+	 if(document.getElementById("screen1").value==3){
+		  document.getElementById("c").play();  
+	 } 
+	 if(document.getElementById("screen1").value==4){
+		  document.getElementById("d").play();  
+	 } 
 	 if(document.getElementById("screen1").value==11){
+	      document.getElementById("a").play(); 
+		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("a").duration*1100); 	    
+	   }
+	  if(document.getElementById("screen1").value==12){
 	      document.getElementById("a").play(); 
 		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("a").duration*1000); 	    
 	   }
-	 if(document.getElementById("screen1").value==1){
-		  document.getElementById("b").play();  
-	 } 
+	  if(document.getElementById("screen1").value==13){
+	      document.getElementById("a").play(); 
+		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("a").duration*1000); 	    
+	   } 
+	  if(document.getElementById("screen1").value==14){
+	      document.getElementById("a").play(); 
+		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("a").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==21){
+	      document.getElementById("b").play(); 
+		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("b").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==22){
+	      document.getElementById("b").play(); 
+		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("b").duration*1100); 	    
+	   } 
+	   if(document.getElementById("screen1").value==23){
+	      document.getElementById("b").play(); 
+		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("b").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==24){
+	      document.getElementById("b").play(); 
+		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("b").duration*1000); 	    
+	   } 
+	      if(document.getElementById("screen1").value==31){
+	      document.getElementById("c").play(); 
+		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("c").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==32){
+	      document.getElementById("c").play(); 
+		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("c").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==33){
+	      document.getElementById("c").play(); 
+		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("c").duration*1100); 	    
+	   } 
+	   if(document.getElementById("screen1").value==34){
+	      document.getElementById("c").play(); 
+		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("c").duration*1000); 	    
+	   } 
+	      if(document.getElementById("screen1").value==41){
+	      document.getElementById("d").play(); 
+		setTimeout(function(){document.getElementById("a").play()}, document.getElementById("d").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==42){
+	      document.getElementById("d").play(); 
+		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("d").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==43){
+	      document.getElementById("d").play(); 
+		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("d").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen1").value==44){
+	      document.getElementById("d").play(); 
+		setTimeout(function(){document.getElementById("d").play()}, document.getElementById("d").duration*1100); 	    
+	   } 
 	   document.getElementById("screen1").value="";  
    }
 	
    function clears2(){
+	   if(document.getElementById("screen2").value==1){
+		  document.getElementById("e").play();  
+	 } 
+	 if(document.getElementById("screen2").value==2){
+		  document.getElementById("f").play();  
+	 } 
+	 if(document.getElementById("screen2").value==3){
+		  document.getElementById("g").play();  
+	 } 
+	 if(document.getElementById("screen2").value==4){
+		  document.getElementById("h").play();  
+	 } 
+	 if(document.getElementById("screen2").value==11){
+	      document.getElementById("e").play(); 
+		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("e").duration*1100); 	    
+	   }
+	  if(document.getElementById("screen2").value==12){
+	      document.getElementById("e").play(); 
+		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("e").duration*1000); 	    
+	   }
+	  if(document.getElementById("screen2").value==13){
+	      document.getElementById("e").play(); 
+		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("e").duration*1000); 	    
+	   } 
+	  if(document.getElementById("screen2").value==14){
+	      document.getElementById("e").play(); 
+		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("e").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==21){
+	      document.getElementById("f").play(); 
+		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("f").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==22){
+	      document.getElementById("f").play(); 
+		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("f").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==23){
+	      document.getElementById("f").play(); 
+		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("f").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==24){
+	      document.getElementById("f").play(); 
+		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("f").duration*1000); 	    
+	   } 
+	      if(document.getElementById("screen2").value==31){
+	      document.getElementById("g").play(); 
+		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("g").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==32){
+	      document.getElementById("g").play(); 
+		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("g").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==33){
+	      document.getElementById("g").play(); 
+		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("g").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==34){
+	      document.getElementById("g").play(); 
+		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("g").duration*1000); 	    
+	   } 
+	      if(document.getElementById("screen2").value==41){
+	      document.getElementById("h").play(); 
+		setTimeout(function(){document.getElementById("e").play()}, document.getElementById("h").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==42){
+	      document.getElementById("h").play(); 
+		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("h").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==43){
+	      document.getElementById("h").play(); 
+		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("h").duration*1000); 	    
+	   } 
+	   if(document.getElementById("screen2").value==44){
+	      document.getElementById("h").play(); 
+		setTimeout(function(){document.getElementById("h").play()}, document.getElementById("h").duration*1000); 	    
+	   } 
 	   document.getElementById("screen2").value="";
    }
    
-   function first(){}
-   function second(){}
-   function third(){}
-   function fourth(){}
-   function fifth(){}	
+   function M1(){document.getElementById("a").play(); }
+   function M2(){document.getElementById("b").play(); }
+   function M3(){document.getElementById("c").play(); }
+   function M4(){document.getElementById("d").play(); }
+   function M5(){ }
+	
+   function F1(){document.getElementById("e").play(); }
+   function F2(){document.getElementById("f").play(); }
+   function F3(){document.getElementById("g").play(); }
+   function F4(){document.getElementById("h").play(); }
+   function F5(){ } 	
 </script>
 </head>
 <body>
      <tr>
-        <th><input type="button" value="1" onclick="first()"></th>
-        <th><input type="button" value="2" onclick="second()"></th>
-	<th><input type="button" value="3" onclick="third()"></th>
-        <th><input type="button" value="4" onclick="fourth()"></th>
-	<th><input type="button" value="5" onclick="fifth()"></th>
+        <th><input type="button" value="M1" onclick="M1()"></th>
+        <th><input type="button" value="M2" onclick="M2()"></th>
+	<th><input type="button" value="M3" onclick="M3()"></th>
+        <th><input type="button" value="M4" onclick="M4()"></th>
+	<th><input type="button" value="M5" onclick="M5()"></th>
 	    </tr>
+    <tr>
+        <th><input type="button" value="F1" onclick="F1()"></th>
+        <th><input type="button" value="F2" onclick="F2()"></th>
+	<th><input type="button" value="F3" onclick="F3()"></th>
+        <th><input type="button" value="F4" onclick="F4()"></th>
+	<th><input type="button" value="F5" onclick="F5()"></th>
+	    </tr>	
     <table>
       	 <tr>
         <th><input type="button" value="男性发音" onclick="clears1()"></th>
@@ -46,11 +205,21 @@
         </tr>  
            </table> 
 
-<audio id=a src="https://www.mfiles.co.uk/mp3-downloads/invention2part-no13.mp3" autostart="false">
+<audio id=a src="C:\Users\wangz\Desktop\M1.mp3" autostart="false">
 	</audio>
-<audio id=b src="https://www.mfiles.co.uk/mp3-downloads/Toccata-and-Fugue-Dm.mp3" autostart="false">
+<audio id=b src="C:\Users\wangz\Desktop\M2.mp3" autostart="false">
 	</audio>	
-	
-	
+<audio id=c src="C:\Users\wangz\Desktop\M3.mp3" autostart="false">
+	</audio>
+<audio id=d src="C:\Users\wangz\Desktop\M4.mp3" autostart="false">
+	</audio>
+<audio id=e src="C:\Users\wangz\Desktop\F1.mp3" autostart="false">
+	</audio>
+<audio id=f src="C:\Users\wangz\Desktop\F2.mp3" autostart="false">
+	</audio>	
+<audio id=g src="C:\Users\wangz\Desktop\F3.mp3" autostart="false">
+	</audio>
+<audio id=h src="C:\Users\wangz\Desktop\F4.mp3" autostart="false">
+	</audio>	
         </body>
 </html>
