--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("c").duration*1000); 	    
 	   } 
 	   if(document.getElementById("screen1").value==33){
-	      document.getElementById("c").play(); 
-		setTimeout(function(){document.getElementById("b").play()}, document.getElementById("c").duration*1100); 	    
+	      document.getElementById("b").play(); 
+		setTimeout(function(){document.getElementById("c").play()}, document.getElementById("c").duration*1100); 	    
 	   } 
 	   if(document.getElementById("screen1").value==34){
 	      document.getElementById("c").play(); 
@@ -140,8 +140,8 @@
 		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("g").duration*1000); 	    
 	   } 
 	   if(document.getElementById("screen2").value==33){
-	      document.getElementById("g").play(); 
-		setTimeout(function(){document.getElementById("f").play()}, document.getElementById("g").duration*1100); 	    
+	      document.getElementById("f").play(); 
+		setTimeout(function(){document.getElementById("g").play()}, document.getElementById("g").duration*1100); 	    
 	   } 
 	   if(document.getElementById("screen2").value==34){
 	      document.getElementById("g").play(); 
