--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ clears2();
 </script>
 </head>
 <body onkeydown='onEnterDown();'>
+(M=Male, F=Female)<br/>
      <tr>
         <th><input type="button" value="M1" onclick="M1()"></th>
         <th><input type="button" value="M2" onclick="M2()"></th>
@@ -211,7 +212,7 @@ clears2();
 	<th><input id="screen2"></th>
         </tr>  
            </table> 
-
+(The tool is still in beta)
 <audio id=a src="C:\Users\wangz\Desktop\M1.mp3" autostart="false">
 	</audio>
 <audio id=b src="C:\Users\wangz\Desktop\M2.mp3" autostart="false">
