--- a/index.html
+++ b/index.html
@@ -213,21 +213,21 @@ clears2();
         </tr>  
            </table> 
 (The tool is still in beta)
-<audio id=a src="C:\Users\wangz\Desktop\M1.mp3" autostart="false">
+<audio id=a src="M1.mp3" autostart="false">
 	</audio>
-<audio id=b src="C:\Users\wangz\Desktop\M2.mp3" autostart="false">
+<audio id=b src="M2.mp3" autostart="false">
 	</audio>	
-<audio id=c src="C:\Users\wangz\Desktop\M3.mp3" autostart="false">
+<audio id=c src="M3.mp3" autostart="false">
 	</audio>
-<audio id=d src="C:\Users\wangz\Desktop\M4.mp3" autostart="false">
+<audio id=d src="M4.mp3" autostart="false">
 	</audio>
-<audio id=e src="C:\Users\wangz\Desktop\F1.mp3" autostart="false">
+<audio id=e src="F1.mp3" autostart="false">
 	</audio>
-<audio id=f src="C:\Users\wangz\Desktop\F2.mp3" autostart="false">
+<audio id=f src="F2.mp3" autostart="false">
 	</audio>	
-<audio id=g src="C:\Users\wangz\Desktop\F3.mp3" autostart="false">
+<audio id=g src="F3.mp3" autostart="false">
 	</audio>
-<audio id=h src="C:\Users\wangz\Desktop\F4.mp3" autostart="false">
+<audio id=h src="F4.mp3" autostart="false">
 	</audio>	
         </body>
 </html>
