--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>发音工具0000</title>
+<title>发音工具</title>
 <script type="text/javascript"> 
  
    function clears1(){	
