--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ clears2();
 <body onkeydown='onEnterDown();'>
 (M=Male, F=Female)<br/>
      <tr>
-        <th><input type="button" value="M1" onclick="M1()"></th>
+        <th><input type="button" value="M1" onclick="M1()" required></th>
         <th><input type="button" value="M2" onclick="M2()"></th>
 	<th><input type="button" value="M3" onclick="M3()"></th>
         <th><input type="button" value="M4" onclick="M4()"></th>
