--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ clears2();
 <body onkeydown='onEnterDown();'>
 (M=Male, F=Female)<br/>
      <tr>
-        <th><input type="button" value="M1" onclick="M1()" required></th>
+        <th><input type="button" value="M1" onclick="M1()"></th>
         <th><input type="button" value="M2" onclick="M2()"></th>
 	<th><input type="button" value="M3" onclick="M3()"></th>
         <th><input type="button" value="M4" onclick="M4()"></th>
@@ -204,11 +204,11 @@ clears2();
 	    </tr>	
     <table>
       	 <tr>
-        <th><input type="button" value="男性发音" onclick="clears1()"></th>
+        <th><input type="button" value="男性发音" onclick="clears1() required "></th>
 	<th><input id="screen1"></th>
         </tr>  
 	 <tr>
-        <th><input type="button" value="女性发音" onclick="clears2()"></th>
+        <th><input type="button" value="女性发音" onclick="clears2() required"></th>
 	<th><input id="screen2"></th>
         </tr>  
            </table> 
