--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@ clears2();
 	    </tr>	
     <table>
       	 <tr>
-        <th><input type="button" value="男性发音" onclick="clears1() required "></th>
+        <th><input type="button" value="男性发音" onclick="clears1()" required ></th>
 	<th><input id="screen1"></th>
         </tr>  
 	 <tr>
-        <th><input type="button" value="女性发音" onclick="clears2() required"></th>
+        <th><input type="button" value="女性发音" onclick="clears2()" required></th>
 	<th><input id="screen2"></th>
         </tr>  
            </table> 
