--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
 	</tr>	
     <table>
       	<tr>
-           <th><input type="submit" value="男性发音" onclick="clears1()" pattern="^[1-4]{4}$" ></th>
-	       <th><input id="screen1"></th>
+           <th><input type="submit" value="男性发音" onclick="clears1()"  ></th>
+	       <th><input id="screen1" pattern="^[1-4]{4}$"></th>
         </tr>  
 	    <tr>
-           <th><input type="submit" value="女性发音" onclick="clears2()" pattern="^[1-4]{4}$"></th>
-	       <th><input id="screen2"></th>
+           <th><input type="submit" value="女性发音" onclick="clears2()"></th>
+	       <th><input id="screen2" pattern="^[1-4]{4}$"></th>
         </tr>  
     </table> 
 (The tool is still in beta)
